--- a/sespa/app/views/class_site_list.html
+++ b/sespa/app/views/class_site_list.html
@@ -8,7 +8,7 @@
       <tr>
         <th>
           <a href="" ng-click="sortType = 'class_site.description'; sortReverse = !sortReverse">
-            Class Site
+            Course Site
             <span class="fa fa-caret-down" ng-show="sortType == 'class_site.description' &amp;&amp; !sortReverse"></span>
             <span class="fa fa-caret-up" ng-show="sortType == 'class_site.description' &amp;&amp; sortReverse"></span>
           </a>
@@ -17,7 +17,7 @@
           <a>Status</a>
         </th>
         <th>
-          <a>Class Standing</a>
+          <a>Current Percentage</a>
         </th>
       </tr>
     </thead>
@@ -31,10 +31,10 @@
           <div class="progress" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
             <div class="progress-bar studentGradeBar" role="progressbar" aria-valuenow="{{classSite.current_student_score_average}}"
               aria-valuemin="0" aria-valuemax="100" style="width:{{classSite.current_student_score_average}}%" title="Student Grade: {{classSite.current_student_score_average}}%" data-toggle="tooltip" data-placement="bottom" tooltip>
-              <span class="sr-only">Student Grade: {{classSite.current_student_score_average}}%</span>
+              <span class="sr-only">Student Percentage: {{classSite.current_student_score_average}}%</span>
             </div>
             <div class="classAveBar" data-toggle="tooltip" data-placement="bottom" style="left: {{classSite.current_class_score_average}}%;" title="Class Average Grade: {{classSite.current_class_score_average}}%" tooltip>
-              <span class="sr-only">Class Average Grade: {{classSite.current_class_score_average}}%</span>
+              <span class="sr-only">Class Percentage: {{classSite.current_class_score_average}}%</span>
             </div>
           </div>
         </td>
