--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -1,5 +1,6 @@
 <div class="col-lg-12">
-  <h2 ng-if="classSiteDetailHeader" class="sub-header">{{classSiteDetailHeader}}</h2>
+  <a href="#/students/{{student.username}}/"><h2 class="sub-header">{{student.first_name}} {{student.last_name}}</h2></a>
+
   <hr class="main-no-margin-top" />
   <h3 class="main-h3">Course Site: {{classSite.class_site.description}}</h3>
   <p>
