--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -15,8 +15,11 @@
           </tr>
           <tr>
             <th><a>Advisors</a></th>
-            <td><p ng-repeat="advisor in advisors" title="{{advisor.role}}">
+            <td><p ng-repeat="advisor in advisors">
                 {{ advisor.advisor.first_name }} {{ advisor.advisor.last_name }}
+                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"
+                    title="{{advisor.role}}"
+                    data-toggle="tooltip" data-placement="bottom" tooltip></span>
             </p></td>
           </tr>
         </tbody>
