Unlock footer for small screens

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -145,6 +145,14 @@ body {
   .hide-small {
     display: none;
   }
+  
+  .navbar-fixed-bottom {
+    position: relative;
+  }
+  
+  body {
+      padding-bottom: 0;
+  }
 }
 
 /* For ng-cloak */
