--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -137,7 +137,10 @@
             <td>{{assignment.points_earned}}</td>
             <td>{{assignment.points_possible}}</td>
             <td>{{assignment.weight}}</td>
-            <td>{{assignment.grader_comment}}</td>
+            <td>
+              <button ng-if="assignment.grader_comment != '' &amp;&amp; assignment.grader_comment != null" id="{{'commentButton' + ($index + 1)}}" type="button" ng-click="showComment($index)">Show Grader's comments</button>
+              <p class="hidden" id="{{'graderComment' + ($index + 1)}}">{{assignment.grader_comment}}</p>
+            </td>
           </tr>
         </tbody>
       </table>
