--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -141,6 +141,12 @@ body {
   }
 }
 
+@media screen and (max-width: 612px) {
+  .footer-block {
+    display: block;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .hide-small {
     display: none;
@@ -151,7 +157,7 @@ body {
   }
   
   body {
-      padding-bottom: 0;
+    padding-bottom: 0;
   }
 }
 
