Add template to status directive

--- a/sespa/app/views/class_site_list.html
+++ b/sespa/app/views/class_site_list.html
@@ -25,10 +25,7 @@
       <tr ng-repeat="classSite in classSites | orderBy:sortType:sortReverse | filter:searchAdvisor">
         <td class="bold"><a href="#/students/{{student.username}}/class_sites/{{classSite.class_site.code}}">{{ classSite.class_site.description }}</a></td>
         <td>
-          <img alt="{{classSite.status}}" class="class-site-status {{ classSite.status | lowercase }}" ng-src="images/Status_Icons_{{classSite.status}}.png"
-            aria-hidden="true"
-            title="{{classSite.status}}"
-            data-toggle="tooltip" data-placement="bottom" status-tooltip/>
+          <status-tooltip status="classSite.status"></status-tooltip>
       	</td>
         <td>
           <div class="progress" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
