--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12">
+<div ng-if="student && classSite" ng-cloak class="col-lg-12">
 
   <h2 class="sub-header">{{student.first_name}} {{student.last_name}}
     <a class="pull-right backlink" href="#/students/{{student.username}}/">
