--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -1,3 +1,4 @@
+<div ng-if="student">
 <h2 class="sub-header">{{student.first_name}} {{student.last_name}}</h2>
 <hr class="main-no-margin-top"/>
 
@@ -25,4 +26,5 @@
         </tbody>
       </table>
     </div>
+</div>
 </div>
