--- a/sespa/app/views/class_site_list.html
+++ b/sespa/app/views/class_site_list.html
@@ -1,3 +1,4 @@
+<div ng-if="classSites" ng-cloak>
 <h2 ng-if="classSiteListHeader" class="sub-header">{{classSiteListHeader}}</h2>
 <div ng-if="classSites.length == 0">
   <p>There is no class site data for this student.</p>
@@ -41,4 +42,5 @@
       </tr>
     </tbody>
   </table>
+</div>
 </div>
