Remove hover effects on unsortable column titles

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -285,3 +285,8 @@ svg text {
     color: #dedede;
     background-color: transparent;
 }
+
+.unsortable:hover {
+    text-decoration: none;
+    color: #337ab7;
+}
