--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -52,19 +52,19 @@
           </a>
             </td>
             <td>
-              <a>Status</a>
+              <a class="unsortable">Status</a>
             </td>
             <td>
-              <a>Student Percentage</a>
+              <a class="unsortable">Student Percentage</a>
             </td>
             <td>
-              <a>Class Percentage</a>
+              <a class="unsortable">Class Percentage</a>
             </td>
             <td>
-              <a>Event Count</a>
+              <a class="unsortable">Event Count</a>
             </td>
             <td>
-              <a>Activity Percentile Rank</a>
+              <a class="unsortable">Activity Percentile Rank</a>
             </td>
           </tr>
         </thead>
@@ -109,13 +109,13 @@
           </a>
             </td>
             <td>
-              <a>Included in Grade</a>
+              <a class="unsortable">Included in Grade</a>
             </td>
             <td>
-              <a>Points Earned</a>
+              <a class="unsortable">Points Earned</a>
             </td>
             <td>
-              <a>Points Possible</a>
+              <a class="unsortable">Points Possible</a>
             </td>
             <td>
               <a href="" ng-click="sortTypeAssignment = 'weight'; sortReverse = !sortReverse">
@@ -125,7 +125,7 @@
           </a>
             </td>
             <td>
-              <a>Grader's Comment</a>
+              <a class="unsortable">Grader's Comment</a>
             </td>
           </tr>
         </thead>
