--- a/sespa/app/views/class_site_list.html
+++ b/sespa/app/views/class_site_list.html
@@ -15,10 +15,10 @@
           </a>
         </th>
         <th>
-          <a class="unsortable">Status</a>
+          <a>Status</a>
         </th>
         <th>
-          <a class="unsortable">Current Percentage</a>
+          <a>Current Percentage</a>
         </th>
       </tr>
     </thead>
