--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -283,7 +283,7 @@ svg text {
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
     color: #dedede;
-    background-color: transparent;
+    background-color: #124465;
 }
 
 .unsortable:hover {
