--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -11,17 +11,17 @@
       <table class="table">
         <tbody>
           <tr>
-            <th><a class="unsortable">Student ID</a></th>
+            <th scope="row"><a class="unsortable">Student ID</a></th>
             <td>{{ student.univ_id }}</td>
           </tr>
           <tr>
-            <th><a class="unsortable">Advisors</a></th>
+            <th scope="row"><a class="unsortable">Advisors</a></th>
             <td><p ng-repeat="advisor in advisors">
                 <a href="#/advisors/{{advisor.advisor.username}}/">
                 {{ advisor.advisor.first_name }} {{ advisor.advisor.last_name }}</a>
                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true"
                     title="{{advisor.role}}"
-                    data-toggle="tooltip" data-placement="bottom" tooltip></span>
+                    data-toggle="tooltip" data-placement="bottom" tooltip></span><span class="sr-only">{{advisor.role}}</span>
             </p></td>
           </tr>
         </tbody>
