--- a/sespa/app/views/advisor_list.html
+++ b/sespa/app/views/advisor_list.html
@@ -3,28 +3,28 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <td>
+        <th scope="col">
           <a href="" ng-click="sortType = 'last_name'; sortReverse = !sortReverse">
             Name
-            <span class="fa fa-caret-down" ng-show="sortType == 'last_name' &amp;&amp; !sortReverse"></span>
-            <span class="fa fa-caret-up" ng-show="sortType == 'last_name' &amp;&amp; sortReverse"></span>
+            <span class="fa fa-caret-down" ng-show="sortType == 'last_name' &amp;&amp; !sortReverse"><span class="sr-only"> (descending sort)</span></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'last_name' &amp;&amp; sortReverse"><span class="sr-only"> (ascending sort)</span></span>
           </a>
-        </td>
-        <td>
+        </th>
+        <th scope="col">
           <a href="" ng-click="sortType = 'univ_id'; sortReverse = !sortReverse">
             Advisor ID
-            <span class="fa fa-caret-down" ng-show="sortType == 'univ_id' &amp;&amp; !sortReverse"></span>
-            <span class="fa fa-caret-up" ng-show="sortType == 'univ_id' &amp;&amp; sortReverse"></span>
+            <span class="fa fa-caret-down" ng-show="sortType == 'univ_id' &amp;&amp; !sortReverse"><span class="sr-only"> (descending sort)</span></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'univ_id' &amp;&amp; sortReverse"><span class="sr-only"> (ascending sort)</span></span>
           </a>
-        </td>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="advisor in advisors | orderBy:sortType:sortReverse | filter:searchAdvisor">
-        <td class="bold">
+        <th scope="row" class="bold">
           <a href="#/advisors/{{advisor.username}}">{{ advisor.first_name }}
             {{ advisor.last_name }}</a>
-        </td>
+        </th>
         <td>{{ advisor.univ_id }}</td>
       </tr>
     </tbody>
