--- a/sespa/app/views/class_site_list.html
+++ b/sespa/app/views/class_site_list.html
@@ -7,24 +7,24 @@
   <table class="table">
     <thead>
       <tr>
-        <th>
+        <th scope="col">
           <a href="" ng-click="sortType = 'class_site.description'; sortReverse = !sortReverse">
             Course Site
-            <span class="fa fa-caret-down" ng-show="sortType == 'class_site.description' &amp;&amp; !sortReverse"></span>
-            <span class="fa fa-caret-up" ng-show="sortType == 'class_site.description' &amp;&amp; sortReverse"></span>
+            <span class="fa fa-caret-down" ng-show="sortType == 'class_site.description' &amp;&amp; !sortReverse"><span class="sr-only"> (ascending sort)</span></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'class_site.description' &amp;&amp; sortReverse"><span class="sr-only"> (descending sort)</span></span>
           </a>
         </th>
-        <th>
+        <th scope="col">
           <a class="unsortable">Status</a>
         </th>
-        <th>
+        <th scope="col">
           <a class="unsortable">Current Percentage</a>
         </th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="classSite in classSites | orderBy:sortType:sortReverse | filter:searchAdvisor">
-        <td class="bold"><a href="#/students/{{student.username}}/class_sites/{{classSite.class_site.code}}">{{ classSite.class_site.description }}</a></td>
+        <th scope="row" class="bold"><a href="#/students/{{student.username}}/class_sites/{{classSite.class_site.code}}">{{ classSite.class_site.description }}</a></th>
         <td>
           <status-tooltip status="classSite.status"></status-tooltip>
       	</td>
