--- a/sespa/app/views/status_image.html
+++ b/sespa/app/views/status_image.html
@@ -1,2 +1,2 @@
-<img class="class-site-status {{ statusOutput | lowercase }}" ng-src="images/Status_Icons_{{statusOutput}}.png"
-       aria-hidden="true" data-toggle="tooltip" data-placement="bottom"/>
+<img ng-show="statusOutput" class="class-site-status {{ statusOutput | lowercase }}" ng-src="images/Status_Icons_{{statusOutput}}.png"
+       data-toggle="tooltip" data-placement="bottom" alt="{{statusOutput | lowercase | colorToStatus}}"/>
