--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -6,42 +6,42 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <td>
+      <th scope="col">
         <a href="" ng-click="sortType = 'last_name'; sortReverse = !sortReverse">
           Name
-          <span class="fa fa-caret-down" ng-show="sortType == 'last_name' &amp;&amp; !sortReverse"></span>
-          <span class="fa fa-caret-up" ng-show="sortType == 'last_name' &amp;&amp; sortReverse"></span>
+          <span class="fa fa-caret-down" ng-show="sortType == 'last_name' &amp;&amp; !sortReverse"><span class="sr-only"> (ascending sort)</span></span>
+          <span class="fa fa-caret-up" ng-show="sortType == 'last_name' &amp;&amp; sortReverse"><span class="sr-only"> (descending sort)</span></span>
         </a>
-      </td>
-      <td class="hide-small">
+      </th>
+      <th scope="col" class="hide-small">
         <a href="" ng-click="sortType = 'univ_id'; sortReverse = !sortReverse">
           Student ID
-          <span class="fa fa-caret-down" ng-show="sortType == 'univ_id' &amp;&amp; !sortReverse"></span>
-          <span class="fa fa-caret-up" ng-show="sortType == 'univ_id' &amp;&amp; sortReverse"></span>
+          <span class="fa fa-caret-down" ng-show="sortType == 'univ_id' &amp;&amp; !sortReverse"><span class="sr-only"> (ascending sort)</span></span>
+          <span class="fa fa-caret-up" ng-show="sortType == 'univ_id' &amp;&amp; sortReverse"><span class="sr-only"> (descending sort)</span></span>
         </a>
-      </td>
-      <td>
+      </th>
+      <th scope="col">
         <a href="" ng-click="sortType = 'status_weight'; sortReverse = !sortReverse">
           Status
-          <span class="fa fa-caret-down" ng-show="sortType == 'status_weight' &amp;&amp; !sortReverse"></span>
-          <span class="fa fa-caret-up" ng-show="sortType == 'status_weight' &amp;&amp; sortReverse"></span>
+          <span class="fa fa-caret-down" ng-show="sortType == 'status_weight' &amp;&amp; !sortReverse"><span class="sr-only"> (ascending sort)</span></span>
+          <span class="fa fa-caret-up" ng-show="sortType == 'status_weight' &amp;&amp; sortReverse"><span class="sr-only"> (descending sort)</span></span>
         </a>
-      </td>
-      <td class="hide-small">
+      </th>
+      <th scope="col" class="hide-small">
         <a href="" ng-click="sortType = 'cohorts'; sortReverse = !sortReverse">
           Cohorts
-          <span class="fa fa-caret-down" ng-show="sortType == 'cohorts' &amp;&amp; !sortReverse"></span>
-          <span class="fa fa-caret-up" ng-show="sortType == 'cohorts' &amp;&amp; sortReverse"></span>
+          <span class="fa fa-caret-down" ng-show="sortType == 'cohorts' &amp;&amp; !sortReverse"><span class="sr-only"> (ascending sort)</span></span>
+          <span class="fa fa-caret-up" ng-show="sortType == 'cohorts' &amp;&amp; sortReverse"><span class="sr-only"> (descending sort)</span></span>
         </a>
-      </td>
+      </th>
     </tr>
   </thead>
   <tbody>
     <tr ng-repeat="student in students | orderBy:sortType:sortReverse | filter:searchStudent">
-      <td class="bold">
+      <th scope="row" class="bold">
         <a href="#/students/{{student.username}}/">{{ student.first_name }}
           {{ student.last_name }}</a>
-      </td>
+      </th>
       <td class="hide-small">{{ student.univ_id }}</td>
       <td>
         <status-tooltip ng-repeat="status in student.statuses track by $index" status="status"></status-tooltip>
