--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -29,3 +29,12 @@
     </div>
 </div>
 </div>
+
+<div ng-if="notFound" class="panel panel-warning not-found">
+  <div class="panel-heading">
+    <h3 class="panel-title">Not Found</h3>
+  </div>
+  <div class="panel-body">
+    Student not found ({{studentUsername}}).
+  </div>
+</div>
