--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -102,3 +102,12 @@
 
   <dig-data-fetch-progress progress="{{progress}}"></dig-data-fetch-progress>
 </div>
+
+<div ng-if="notFound" class="panel panel-warning not-found">
+  <div class="panel-heading">
+    <h3 class="panel-title">Not Found</h3>
+  </div>
+  <div class="panel-body">
+    This student was not found in the requested course site.
+  </div>
+</div>
