Replace "<" with "&lt;"

--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -2,7 +2,7 @@
 
   <h2 class="sub-header">{{student.first_name}} {{student.last_name}}
     <a class="pull-right backlink" href="#/students/{{student.username}}/">
-      < Back to Course List<p>
+      &lt; Back to Course List<p>
     </a>
   </h2>
 
