--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -290,7 +290,11 @@ svg text {
     font-size: 15px;
 }
 
-.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+.navbar-inverse .navbar-nav > li.active > a, .navbar-inverse .navbar-nav > li.active > a:hover, .navbar-inverse .navbar-nav > li.active > a:focus {
+    background-color: #124465;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover {
     color: #dedede;
     background-color: #124465;
 }
