Make the percentage tooltips easier to view

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -261,6 +261,10 @@ svg text {
   border-radius: 5px 5px 0 0;
 }
 
+.tooltip-inner {
+    text-align:left;
+    white-space: pre-line;
+}
 
 .backlink{
     font-size: 20px;
