Change class_site_list/detail to student_...

--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -3,7 +3,7 @@
 <hr class="main-no-margin-top"/>
 
 <div class="col-sm-8">
-    <div ng-include="'views/class_site_list.html'" ></div>
+    <div ng-include="'views/student_class_site_list.html'" ></div>
 </div>
 
 <div class="student-info col-sm-4 well">
