--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -1,9 +1,9 @@
 <div ng-if="student && classSite" ng-cloak class="col-lg-12">
 
   <h2 class="sub-header">
-    <p>{{student.first_name}} {{student.last_name}}<p>
-    <a class="backlink" href="#/students/{{student.username}}/">
-      &lt; Back to Course List<p>
+    <p>{{student.first_name}} {{student.last_name}}</p>
+    <a class="backlink" href="#/students/{{student.username}}">
+      &lt; Back to Course List
     </a>
   </h2>
 
