--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -19,26 +19,9 @@
     </div>
   </div>
   <hr class="main-no-margin-top" />
-  <div ng-if="classSiteHistory" class="row">
-    <div class="col-lg-6">
-      <nvd3-line-plus-bar-chart data="scoreData" id="scoreChart" width="540" margin="{left:73}" xAxisTickFormat="xAxisTickFormatFunction()" y1AxisLabel="{{y1axislabeltext}}" y2AxisLabel="{{y2axislabeltext}}" y1AxisTickFormat="y1AxisTickFormat()" forceY="[0,100]"
-      tooltipcontent="tooltipContentFunction()" legendWidth="400" showLegend="true" interactive="true" useInteractiveGuideLine="true" tooltips="true" forcey="[0,100]" xAxisLabel="Weeks">
-        <svg></svg>
-      </nvd3-line-plus-bar-chart>
-
-      <div class="graph-caption">Score History</div>
-    </div>
-
-
-    <div class="col-lg-6">
-      <nvd3-multi-bar-chart data="eventData" id="exampleId" width="530" height="350" margin="{left:73}" showXAxis="true" showYAxis="true" showLegend="true" forcey="[0,100]" interactive="true" useInteractiveGuideLine="true" tooltips="true" xAxisTickFormat="xAxisTickFormatFunction()"
-      tooltipcontent="tooltipContentFunction()" isArea="true" noData="No Data For You!" xAxisLabel="Weeks" yAxisLabel="Percentile">
-        <svg></svg>
-      </nvd3-multi-bar-chart>
-      <div class="graph-caption">Activity History</div>
-    </div>
+  <div id="chart">
+    <svg> </svg>
   </div>
-
   
   <div class="row assignments">
     <h3 class="main-less-weight">Assignments </h3>
